# cmake-experiment

add/: CMakeLists.txt
add/inc/add/: add.hpp
add/src/: add.cpp
add/test/: test_add.cpp
foo/: CMakeLists.txt
foo/inc/foo/: foo.hpp
foo/src/: foo.cpp
foo/test/: test_foo.cpp
rangecheck/: CMakeLists.txt
rangecheck/inc/rangecheck/: rangecheck.hpp
rangecheck/src/: rangecheck.cpp
rangecheck/test/: test_rangecheck.cpp
sub/: CMakeLists.txt
sub/inc/sub/: sub.hpp
sub/src/: sub.cpp
sub/test/: test_sub.cpp
